[package]
name = "revparse"
version = "1.2.8"
edition = "2024"
license = "MIT"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "GNU Style Argument Parser, that's easy to use."
repository = "https://github.com/revellan/revparse"
homepage = "https://revparse.revellan.com"
readme = "README.md"

[dependencies]
