[package]
name = "revparse"
version = "2.2.1"
edition = "2024"
license = "MIT"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "GNU Style CLI Argument Parser, that's easy to use."
repository = "https://github.com/revellan/revparse"
homepage = "https://revparse.revellan.com"
readme = "README.md"

[dependencies]
