[package]
name = "revparse"
version = "3.0.4"
edition = "2024"
license = "MIT"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "GNU Style CLI Argument Parser, that's easy to use."
repository = "https://github.com/revellan/revparse"
homepage = "https://revparse.revellan.com"
readme = "README.md"

[dependencies]
revparse_derive = "1.0.9"
